# 2017Q2

./: 3dplot.m  CppIex8Fin  Makefile  conf.py  diary  icedtea  index.rst  make.bat  octave-workspace  octave6.m  sent
AppC/: AppC.pro  mainwindow.ui
Bluejproiect/: Salu.ctxt  Salu.java  package.bluej
Bluejproiect/doc/: Salu.html  allclasses-frame.html  allclasses-noframe.html  constant-values.html  index.html  logfile.txt  package-frame.html  package-summary.html
JekyllBlog/_posts/: 2017-07-09-welcome-to-jekyll.markdown
Perlprog/: helloworld  script01.pl  script02.pl  script03.plx
exemplul_5/: .anjuta_sym_db.db  configure.ac
exemplul_5/.anjuta/session/: anjuta.session  dock-layout.xml
exemplul_5/src/: Makefile.am  main.c
exercism/cpp/hello-world/: boostest.cpp  first  first.cpp  hello_world.h  second.cpp
fcdtdebugger/: config.ini
fcdtdebugger/org.eclipse.core.runtime/: .contributions.1  .contributors.1  .extraData.1  .mainData.1  .namespaces.1  .orphans.1  .table.1
fcdtdebugger/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
fcdtdebugger/org.eclipse.osgi/: framework.info.1
fcdtdebugger/org.eclipse.osgi/.manager/: .fileTable.1  .fileTable.2
fcdtdebugger/org.eclipse.osgi/100/0/: bundleFile
fcdtdebugger/org.eclipse.osgi/104/0/: bundleFile
fcdtdebugger/org.eclipse.osgi/106/0/: bundleFile
fcdtdebugger/org.eclipse.osgi/108/0/: bundleFile
fcdtdebugger/org.eclipse.osgi/114/0/: bundleFile
fcdtdebugger/org.eclipse.osgi/118/0/: bundleFile
fcdtdebugger/org.eclipse.osgi/2/0/: bundleFile
man/man1/: jedit.1
projects/: GeanyC.geany
(+20 files in other folders)
